// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Custom dimensions 1`] = `
<div
  className="button"
  data-jsx-ext="21508272676"
  style={
    Object {
      "backgroundColor": "rgb(85, 172, 241)",
      "backgroundImage": "none",
      "borderRadius": "20px",
      "boxShadow": "none",
      "color": "rgb(255, 255, 255)",
      "height": "300px",
      "width": "300px",
    }
  }
>
  I can be any size and the text is centered and multiline
</div>
`;

exports[`Storyshots Button Custom gradient 1`] = `
<div
  className="button shadow regular"
  data-jsx-ext="21508272676"
  style={
    Object {
      "backgroundColor": "rgb(129, 36, 122)",
      "backgroundImage": "linear-gradient(to right, #81247A, #303993)",
      "borderRadius": "20px",
      "boxShadow": "0px 4px 0px hsl(304.5, 56.4%, 24.3%)",
      "color": "rgb(255, 255, 255)",
    }
  }
>
  Custom gradient
</div>
`;

exports[`Storyshots Button Dispay block 1`] = `
<div
  className="button block"
  data-jsx-ext="21508272676"
  style={
    Object {
      "backgroundColor": "rgb(85, 172, 241)",
      "backgroundImage": "none",
      "borderRadius": "20px",
      "boxShadow": "none",
      "color": "rgb(255, 255, 255)",
    }
  }
>
  I display block
</div>
`;

exports[`Storyshots Button Plain button 1`] = `
<div
  className="button regular"
  data-jsx-ext="21508272676"
  style={
    Object {
      "backgroundColor": "rgb(85, 172, 241)",
      "backgroundImage": "none",
      "borderRadius": "20px",
      "boxShadow": "none",
      "color": "rgb(255, 255, 255)",
    }
  }
>
  A simple button
</div>
`;

exports[`Storyshots Button Round with icon 1`] = `
<div
  className="button shadow round regular"
  data-jsx-ext="21508272676"
  style={
    Object {
      "backgroundColor": "rgb(129, 36, 122)",
      "backgroundImage": "none",
      "borderRadius": "50%",
      "boxShadow": "0px 4px 0px hsl(304.5, 56.4%, 24.3%)",
      "color": "rgb(255, 255, 255)",
    }
  }
>
  <i
    className="icon-pencil"
    style={
      Object {
        "color": "inherit",
        "fontSize": "inherit",
        "verticalAlign": "middle",
      }
    }
  />
</div>
`;

exports[`Storyshots Button With shadow and gradient 1`] = `
<div
  className="button shadow regular"
  data-jsx-ext="21508272676"
  style={
    Object {
      "backgroundColor": "rgb(85, 172, 241)",
      "backgroundImage": "linear-gradient(to right, #55acf1, hsl(206.5, 84.8%, 76.7%))",
      "borderRadius": "20px",
      "boxShadow": "0px 4px 0px hsl(206.5, 84.8%, 47.9%)",
      "color": "rgb(255, 255, 255)",
    }
  }
>
  With shadow & gradient
</div>
`;

exports[`Storyshots Icon Icon 1`] = `
<i
  className="icon-night-zookeeper-logo"
  style={
    Object {
      "color": "#000",
      "fontSize": "28px",
      "verticalAlign": "middle",
    }
  }
/>
`;

exports[`Storyshots ShareDropDown Dropdown 1`] = `
<div
  className="host"
  data-jsx-ext="24108245120"
  style={
    Object {
      "backgroundColor": "#eee",
      "color": "#555",
    }
  }
>
  <div
    className="drop attached-top"
    data-jsx-ext="24108245120"
  >
    <div
      className="arrow attached-top"
      data-jsx-ext="24108245120"
      style={
        Object {
          "borderBottom": "25px solid #eee",
          "right": "-20px",
        }
      }
    />
    <div
      className="drop-content"
      data-jsx-ext="24108245120"
    >
      <h4
        data-jsx-ext="24108245120"
      >
        Share this with
      </h4>
      <ul
        data-jsx-ext="24108245120"
      >
        <li
          data-jsx-ext="24108245120"
        >
          <a
            data-jsx-ext="24108245120"
            href="http://www.facebook.com/sharer/sharer.php?u=https://www.nightzookeeper.com"
            target="_blank"
          >
            <i
              className="icon-facebook"
              style={
                Object {
                  "color": "#323091",
                  "fontSize": "inherit",
                  "verticalAlign": "middle",
                }
              }
            />
             Facebook
          </a>
        </li>
        <li
          data-jsx-ext="24108245120"
        >
          <a
            data-jsx-ext="24108245120"
            href="http://twitter.com/share?url=https://www.nightzookeeper.com;via=nightzookeeper"
            target="_blank"
          >
            <i
              className="icon-twitter"
              style={
                Object {
                  "color": "#3BABE6",
                  "fontSize": "inherit",
                  "verticalAlign": "middle",
                }
              }
            />
             Twitter
          </a>
        </li>
      </ul>
      <p
        data-jsx-ext="24108245120"
      >
        Copy this link
        <input
          data-jsx-ext="24108245120"
          onfocus="this.select();"
          type="text"
          value="https://www.nightzookeeper.com"
        />
      </p>
      <h4
        data-jsx-ext="24108245120"
      >
        Follow us on
      </h4>
      <a
        data-jsx-ext="24108245120"
        href="http://facebook.com/nightzookeeper"
        target="_blank"
      >
        <i
          className="icon-facebook"
          style={
            Object {
              "color": "#323091",
              "fontSize": "inherit",
              "verticalAlign": "middle",
            }
          }
        />
      </a>
      <a
        data-jsx-ext="24108245120"
        href="https://twitter.com/nightzookeeper"
        target="_blank"
      >
        <i
          className="icon-twitter"
          style={
            Object {
              "color": "#3BABE6",
              "fontSize": "inherit",
              "verticalAlign": "middle",
            }
          }
        />
      </a>
      <a
        data-jsx-ext="24108245120"
        href="https://www.pinterest.com/nightzookeeper/"
        target="_blank"
      >
        <i
          className="icon-pinterest"
          style={
            Object {
              "color": "#B60225",
              "fontSize": "inherit",
              "verticalAlign": "middle",
            }
          }
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots WritingTool Field 1`] = `
<div>
  <div
    className="input"
    data-jsx-ext="2606637296"
  >
    <input
      className="input"
      data-jsx-ext="2606637296"
      onChange={undefined}
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.04)",
          "color": "white",
          "content": "",
          "height": "35px",
          "width": "33%",
        }
      }
      type="text"
      value={undefined}
    />
    <div
      className="removeButton dark"
      data-jsx-ext="2606637296"
      onClick={undefined}
    />
  </div>
  <div
    className="input"
    data-jsx-ext="2606637296"
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.04)",
        "color": "white",
        "content": "",
        "height": "35px",
        "width": "75%",
      }
    }
    type="text"
  >
    <div
      className="removeButton dark"
      data-jsx-ext="2606637296"
      onClick={undefined}
    />
  </div>
  <button
    className="input block button"
    data-jsx-ext="2606637296"
    onClick={undefined}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.04)",
        "color": "white",
        "content": "",
        "height": "35px",
        "width": "50%",
      }
    }
  >
    +
  </button>
</div>
`;

exports[`Storyshots WritingTool Fields 1`] = `
<div
  className=""
  data-jsx-ext="22650948305"
>
  <h3
    data-jsx-ext="22650948305"
    style={
      Object {
        "color": "white",
      }
    }
  >
    Opening line
  </h3>
  <ul
    className="stacking"
    data-jsx-ext="22650948305"
  >
    <li
      className="stacking"
      data-jsx-ext="22650948305"
      style={
        Object {
          "width": "calc(50% - 8px)",
        }
      }
    >
      <div
        className="input"
        data-jsx-ext="2606637296"
      >
        <input
          className="input block"
          data-jsx-ext="2606637296"
          onChange={undefined}
          style={
            Object {
              "backgroundColor": "#3CB6BA",
              "color": "white",
              "content": "",
              "height": "35px",
              "width": "50%",
            }
          }
          type="text"
          value={undefined}
        />
        <div
          className="removeButton dark"
          data-jsx-ext="2606637296"
          onClick={undefined}
        />
      </div>
    </li>
    <li
      className="stacking"
      data-jsx-ext="22650948305"
      style={
        Object {
          "width": "calc(50% - 8px)",
        }
      }
    >
      <div
        className="input"
        data-jsx-ext="2606637296"
      >
        <input
          className="input block"
          data-jsx-ext="2606637296"
          onChange={undefined}
          style={
            Object {
              "backgroundColor": "#3CB6BA",
              "color": "white",
              "content": "",
              "height": "35px",
              "width": "50%",
            }
          }
          type="text"
          value={undefined}
        />
        <div
          className="removeButton dark"
          data-jsx-ext="2606637296"
          onClick={undefined}
        />
      </div>
    </li>
    <li
      className="stacking"
      data-jsx-ext="22650948305"
      style={
        Object {
          "width": "calc(50% - 8px)",
        }
      }
    >
      <div
        className="input"
        data-jsx-ext="2606637296"
      >
        <input
          className="input block"
          data-jsx-ext="2606637296"
          onChange={undefined}
          style={
            Object {
              "backgroundColor": "#3CB6BA",
              "color": "white",
              "content": "",
              "height": "35px",
              "width": "50%",
            }
          }
          type="text"
          value={undefined}
        />
        <div
          className="removeButton dark"
          data-jsx-ext="2606637296"
          onClick={undefined}
        />
      </div>
    </li>
    <li
      className="stacking"
      data-jsx-ext="22650948305"
      style={
        Object {
          "width": "calc(50% - 8px)",
        }
      }
    >
      <button
        className="input block button"
        data-jsx-ext="2606637296"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#A5FCFF",
            "color": "white",
            "content": "",
            "height": "35px",
            "width": "50%",
          }
        }
      >
        +
      </button>
    </li>
  </ul>
</div>
`;

exports[`Storyshots WritingTool Wordcount 1`] = `
<div
  className="host"
  data-jsx-ext="2411121501"
  style={
    Object {
      "borderBottomColor": "green",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "2px",
      "textAlign": "center",
      "width": "65px",
    }
  }
>
  0
   / 
  0
</div>
`;
